operation function added

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div id="output-container"></div>
         <div id="calc-top">
             <div class="button" id="clear-button">clear</div>
-            <div class="button">/</div>
-            <div class="button">*</div>
-            <div class="button">-</div>
+            <div class="button operation" id="divide">/</div>
+            <div class="button operation" id="multiply">*</div>
+            <div class="button operation" id="subtract">-</div>
         </div>
 
         <div id="calc-middle">
@@ -34,8 +34,8 @@
             </div>
 
             <div id="calc-side">
-                <div class="button-long">+</div>
-                <div class="button-long">Enter</div>
+                <div class="button-long operation" id="add">+</div>
+                <div class="button-long" id="result">Enter</div>
             </div>
         </div>
 
