added graphical elements in styles.css and index.html

--- a/index.html
+++ b/index.html
@@ -9,36 +9,44 @@
 </head>
 <body>
     <script src="script.js" defer></script>
+    <header>
+        odin calculator!!!
+    </header>
     <div id="calc-main">
         <div id="output-container"></div>
         <div id="calc-top">
-            <div class="button" id="clear-button">clear</div>
-            <div class="button operation" id="divide">/</div>
-            <div class="button operation" id="multiply">*</div>
-            <div class="button operation" id="subtract">-</div>
+            <div class="button" id="clear-button"><span>clear</span></div>
+            <div class="button operation" id="divide"><span>/</span></div>
+            <div class="button operation" id="multiply"><span>*</span></div>
+            <div class="button operation" id="subtract"><span>-</span></div>
         </div>
 
         <div id="calc-middle">
             <div id="calc-digits">
-                <div class="button digit" id="7">7</div>
-                <div class="button digit" id="8">8</div>
-                <div class="button digit" id="9">9</div>
-                <div class="button digit" id="4">4</div>
-                <div class="button digit" id="5">5</div>
-                <div class="button digit" id="6">6</div>
-                <div class="button digit" id="1">1</div>
-                <div class="button digit" id="2">2</div>
-                <div class="button digit" id="3">3</div>
-                <div class="button-hlong digit" id="0">0</div>
-                <div class="button">.</div>
+                <div class="button digit" id="7"><span>7</span></div>
+                <div class="button digit" id="8"><span>8</span></div>
+                <div class="button digit" id="9"><span>9</span></div>
+                <div class="button digit" id="4"><span>4</span></div>
+                <div class="button digit" id="5"><span>5</span></div>
+                <div class="button digit" id="6"><span>6</span></div>
+                <div class="button digit" id="1"><span>1</span></div>
+                <div class="button digit" id="2"><span>2</span></div>
+                <div class="button digit" id="3"><span>3</span></div>
+                <div class="button-hlong digit" id="0"><span>0</span></div>
+                <div class="button"><span>.</span></div>
             </div>
 
             <div id="calc-side">
-                <div class="button-long operation" id="add">+</div>
-                <div class="button-long" id="result">Enter</div>
+                <div class="button-long operation" id="add"><span>+</span></div>
+                <div class="button-long" id="result"><span>Enter</span></div>
             </div>
         </div>
 
+    </div>
+
+    <div class="my-footer">
+        <img src="imgs/github-logo.png" class="github-logo">
+        <a href="https://github.com/wxyzlines" class="github-link">wxyzlines</a>
     </div>
 </body>
 </html>
